cabal-version:      2.4
name:               KoatuuSqlBuilder
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Volodymyr Kuharsky
maintainer:         volodimir.kukharskiy@gmail.com

-- A copyright notice.
-- copyright:
category:           Data
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        SqlBuilder, 
        KOATUU

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base >= 4.8.2.0 && < 5,
        aeson >= 2 && < 3,
        --aeson >= 1.5.5.1 && < 2,
        bytestring >=  0.11.1.0 && < 0.13,
        text >= 1.2.3.0 && < 2,
        strict-base == 0.4.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable KoatuuSqlBuilder
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >= 4.8.2.0 && < 5,
        aeson >=2 && < 3,
        --aeson >= 1.5.5.1 && < 2,
        bytestring >=  0.11.1.0 && < 0.12,
        text >= 1.2.3.0 && < 2,
        strict-base == 0.4.0.0,
        optparse-simple >= 0.1.1.4 && < 0.2,
        KoatuuSqlBuilder

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite KoatuuSqlBuilder-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
